--- a/src/App.scss
+++ b/src/App.scss
@@ -1,14 +1,13 @@
+@import './src/styles/mixins';
+
 button{
 	border: 1px solid black;
 }
 
-//button:hover,
-//button:focus{
-//	opacity: 0.8;
-//}
-//button:active{
-//	box-shadow: inset 0 0 5px 1px rgba(0, 0, 0, 0.4);
-//}
+*{
+	box-sizing: border-box;
+}
+
 
 .main {
 
@@ -19,4 +18,8 @@ button{
 	padding: 15px 50px 40px 15px;
 
 	border: 1px solid black;
+
+	@include media-mobile{
+		padding: 15px 15px 30px 15px;
+	}
 }
