--- a/src/components/TextEditor/TextEditor.module.scss
+++ b/src/components/TextEditor/TextEditor.module.scss
@@ -1,7 +1,10 @@
 .textForm{
 	width: 100%;
 }
-
+.codeEditor{
+	border: 1px solid black;
+}
 .submitBtn{
 	margin-top: 30px;
+	border: 1px solid black;
 }
